SuperAdmin backend fixes